Filter down to page size in every cursor-paginated response (#10475)
## Describe your changes
https://onefootprint.slack.com/archives/C06351DM4PJ/p1720626814725499

Fixes a bug in some cursor-paginated APIs

## Caveats


## Test Plan
